infrastructure/k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: science-map-production
  labels:
    name: science-map-production
    environment: production
